tests/health/gold/sdk/tests__lsp__return_label_definition_test.toit.gold
tests/lsp/return_label_definition_test.toit:16:12: error: Unresolved label 'foo'
  continue.foo
           ^~~
tests/lsp/return_label_definition_test.toit:98:16: error: Can't return out of lambda
      continue.foo
               ^~~
